Fixed date not being visible

--- a/sportsbook/src/App.css
+++ b/sportsbook/src/App.css
@@ -10,6 +10,7 @@
 }
 .homePageInput {
   font-size: 16px;
+  margin-top: 100px;
 }
 .homePageLinks {
   margin-top: 15vh;
